# music-composition-ai

./: .gitignore  PLAN.md  README.md  pyproject.toml
composer/: __init__.py  __main__.py  cli.py  config.py
composer/core/: __init__.py  composition.py  prompt_parser.py  section.py  track.py
composer/generators/: __init__.py  accompaniment.py  bass.py  drums.py  melody.py  orchestrator.py
composer/instruments/: __init__.py  presets.py  registry.py
composer/moods/: __init__.py  mood.py
composer/rendering/: __init__.py  audio_renderer.py  midi_renderer.py
composer/structure/: __init__.py  arrangement.py
composer/styles/: __init__.py  library.py  style.py
composer/theory/: __init__.py  chords.py  constants.py  harmony.py  progressions.py  rhythm.py  scales.py
tests/: test_composition.py  test_generators.py  test_prompt_parser.py  test_rendering.py  test_theory.py
