[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-composer"
version = "1.0.0"
description = "AI-powered music composition engine that generates professional-grade compositions from text prompts"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pretty-midi>=0.2.10",
    "midi2audio>=0.1.0",
    "pydub>=0.25.1",
    "numpy>=1.24.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
composer = "composer.cli:main"

[tool.setuptools.packages.find]
include = ["composer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
